tests/compile_errors/collect-signature.buzz
// Expected `collect` method to be `fun collect() > void` got fun collect(_: str) > void
object Collectable {
    fun collect(_: str) > void {}
}
